G1 deque