@@ -31,8 +31,20 @@ public class G1Heap {
             blocked[block]=true;
         }
         for(int i=0;i<16;i++){
-            if(heap[i].residentObjects.size()>1){;
-                Collections.sort(heap[i].residentObjects, (o1, o2) -> o1.getStart()-o2.getStart());
+            if(heap[i].residentObjects.size()>1){
+                System.out.println();
+                System.out.println();
+                System.out.println("before sorting");
+//                printHeap();
+                HeapObject[] arr = heap[i].residentObjects.toArray(new HeapObject[heap[i].residentObjects.size()]);
+                Arrays.sort(arr, (o1, o2) -> o1.getStart()-o2.getStart());
+                heap[i].residentObjects.clear();
+                Collections.addAll(heap[i].residentObjects,arr);
+                System.out.println("after sorting");
+//                printHeap();
+                System.out.println();
+                System.out.println();
+
             }
         }
 
@@ -40,7 +52,6 @@ public class G1Heap {
 
     public void sweep(){
         System.out.println("before Sweeping");
-
         this.printHeap();
         for(int i=0;i<16;i++){
             if(heap[i].sweepBlock()) blocked[i]=false;
@@ -57,7 +68,7 @@ public class G1Heap {
 
 
         for(int i=0;i<16;i++){
-            if( !blocked[i])    continue;
+            if( !blocked[i])    continue; //blocked? true:continue , false:skip
             //reaching here, we need to set where our objects will go
             while (heap[i].residentObjects.size()>0 ) {
                 System.out.println(i+" s:"+heap[i].residentObjects.size());
@@ -65,66 +76,27 @@ public class G1Heap {
                 //we search for the destination until it fits
                 for(int j=0;j<16;j++){
                     if(!blocked[j]) {
-                        if(heap[j].tryToFit(heap[i].residentObjects.get(0)))
+                        assert heap[i].residentObjects.peekFirst() != null;
+                        if(heap[j].tryToFit(heap[i].residentObjects.peekFirst()))
                             break;
                     }
                 }
-                heap[i].residentObjects.remove(0);
+                heap[i].residentObjects.removeFirst();
                 if(heap[i].residentObjects.size()==0) heap[i].free=true;
             }
-            this.printHeap();
+//            this.printHeap();
         }
 
-
-//            System.out.println("x");
-//            if(i==nextFreeIndex) continue;
-//            int destination = nextFreeIndex;
-//            System.out.println(">> "+heap[i].residentObjects.size());
-//            if(!heap[i].free){
-//                while( heap[i].residentObjects.size()> 0){
-//                    System.out.println("start of loop " + i +" " +heap[i].residentObjects.size());
-//
-//                    //try to fit an object from this block to the free block.
-//                    HeapObject traveller=heap[i].residentObjects.remove(0);
-//                    System.out.println(heap[i].residentObjects.size());
-//
-//                    System.out.println("A");
-//                    do{
-//                        System.out.println("b");
-//                        if (heap[destination%16].tryToFit(traveller)){
-//                            if(heap[i].residentObjects.size()==0) {
-//                                heap[i].free = true;
-//                                i++;
-//                            }
-//                            Collections.sort(heap[destination%16].residentObjects,(o1, o2) -> o1.getStart()-o2.getStart());
-////                            System.out.println("\nFitted an object");
-////                            this.printHeap();
-////                            System.out.println(destination+" "+nextFreeIndex);
-//                            break;
-//                        } else {
-//                            destination++;
-//                        }
-//                    }while ((destination%16)!=nextFreeIndex);
-////                    System.out.println("out of while now");
-////                    this.printHeap();
-//
-////                    if(destination==nextFreeIndex)//failed
-////                    {
-////                        System.out.println("ERROR, removed and object and couldn't fit it anywhere");
-////                        System.exit(0);
-////                    }
-//
-//                }
-//            }
-//        }
         System.out.println("Exit Defragment");
     }
 
     public void printHeap(){
         for(int i=0;i<16;i++){
+            HeapObject[] arr = heap[i].residentObjects.toArray(new HeapObject[0]);
             System.out.println(i+"> " +heap[i].free );
             for(int j=0;j<heap[i].residentObjects.size();j++){
-                System.out.println(heap[i].residentObjects.get(j).getStart()+">>"+heap[i].residentObjects.get(j).getEnd() +" :: "+heap[i].residentObjects.get(j).getId());
+
+                System.out.println(arr[j].getStart()+">>"+arr[j].getEnd() +" :: "+arr[j].getId());
             }
         }
     }
@@ -133,14 +105,14 @@ public class G1Heap {
 
 class G1Block {
     //objects in that block
-    ArrayList<HeapObject> residentObjects;
+    Deque<HeapObject> residentObjects;
 
     int size;
     //to indicate whether the block can be considered a free block
     Boolean free;
 
     public G1Block(int blockSize){
-        residentObjects=new ArrayList<>();
+        residentObjects=new LinkedList<HeapObject>();
         free=true;
         size= blockSize;
     }
@@ -159,13 +131,19 @@ class G1Block {
      * or false if the block still not free
      */
     public boolean sweepBlock(){
-        for(int i=0;i<residentObjects.size();i++){
-            HeapObject o = residentObjects.get(i);
-            if(!o.isMarked()) //sweep
-                residentObjects.remove(o);
+        Deque<HeapObject> temporary= new LinkedList<>();
+        int sizeBefore=residentObjects.size();
+        for(int i=0;i<sizeBefore;i++){
+            HeapObject o = residentObjects.removeFirst();
+            if(o.isMarked()) //sweep
+                temporary.addLast(o);
         }
-        if(residentObjects.size()==0){
+        if(temporary.size()==0){
             this.free=true;
+        }
+        int sizeAfter=temporary.size();
+        for(int i=0;i<sizeAfter;i++){
+            residentObjects.addLast(temporary.removeFirst());
         }
         return this.free;
     }
@@ -177,23 +155,18 @@ class G1Block {
     public boolean tryToFit(HeapObject o){
         int targetSize=o.getEnd()-o.getStart()+1;
         int limit=residentObjects.size();
-        for(int i=0;i<=limit;i++){
-            int start=0;
-            int end=size-1;
-            if(i!=0) {
-                start=residentObjects.get(i-1).getEnd()+1;
-            }
-            if(i!=limit){
-                end=residentObjects.get(i).getStart()-1;
-            }
-            if(end-start+1>=targetSize) {
-                o.setStart(start);
-                o.setEnd(start+targetSize-1);
-                residentObjects.add(i,o);
-                this.free=false;
-                return true;
-            }
-            else continue;
+        int start=0;
+        int end=size-1;
+
+        if(limit!=0){
+            start=residentObjects.peekLast().getEnd()+1;
+        }
+        if(end-start+1>=targetSize){
+            o.setStart(start);
+            o.setEnd(start+targetSize-1);
+            residentObjects.addLast(o);
+            this.free=false;
+            return true;
         }
         return false;
     }
